<resources>
    <string name="app_name">PolyArgent</string>
    <string name="roll">Roll</string>
    <string name="add_expense">Ajouter une dépense</string>
    <string name="add_category">Ajouter une catégorie</string>
    <string name="delete_category">Supprimer une catégorie</string>
    <string name="expense_title">Nom de la transaction</string>
    <string name="amount">Montant</string>
    <string name="save_expense">Enregistrer</string>
    <string name="_0_00">$0.00</string>
    <string name="date">Date</string>
    <string name="cancel">Annuler</string>
    <string name="expense_date">date au moment du changement</string>
    <string name="expense_type">Dépense</string>
    <string name="Rapport">Rapport</string>
    <string name="Accueil">Accueil</string>
    <string name="Category">Catégorie</string>
    <string name="enter_category_name">Entrez le nom de la catégorie</string>
    <string name="save">Enregistrer</string>
    <string name="title_label">Transaction</string>
    <string name="amount_label">Montant</string>
    <string name="date_label">Date</string>
    <string name="type_label">Type</string>
    <string name="category_label">Catégorie</string>
    <string name="icon_label">Icone</string>
    <string name="select_icon">Icone</string>
    <string name="select_color">Couleur</string>
    <string name="income">Revenu</string>
    <string name="expense">Dépense</string>
    <string name="delete">Supprimer</string>
    <string name="expenses">Dépenses</string>
    <string name="incoms">Revenus</string>
    <string name="balance">BALANCE</string>
    <string name="day">Jour</string>
    <string name="week">Semaine</string>
    <string name="month">Mois</string>
    <string name="year">Année</string>
</resources>