<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextNewCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_category_name"
        android:inputType="text"
        android:autofillHints="Food"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSelectColor"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_color" />

        <View
            android:id="@+id/colorPreview"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/square" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSelectIcon"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_icon" />
        <ImageView
            android:id="@+id/iconPreview"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_circle_help"
            android:contentDescription="@string/icon_label"
            app:tint="@android:color/black"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/category_type_rdgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:checkedButton="@id/category_rdbExpense">

        <RadioButton
            android:id="@+id/category_rdbExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/category_rdbincome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonStyle"
            android:id="@+id/btnCancelCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel" />

        <Button
            style="?android:attr/buttonStyle"
            android:id="@+id/btnSaveCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>