<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Food"
        android:hint="@string/expense_title"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/edit_text_bg"/>

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="15"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_expense"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/teal_700"
        android:textColor="@android:color/white"/>
</LinearLayout>
