<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="end"
    android:padding="16dp"
    android:background="@color/white">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTitle"
        style="@style/EditTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/expense_title">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:autofillHints="Food"
            android:inputType="text"
            android:padding="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextAmount"
        style="@style/EditTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/amount">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:autofillHints="15"
            android:inputType="numberDecimal"
            android:padding="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        />

    <Button
        android:id="@+id/addCategoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/Cambridge_blue"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_date"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:textColor="@android:color/black"/>

    <Spinner
        android:id="@+id/spinner_transaction_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:entries="@array/expense_types"
        android:background="@drawable/edit_text_bg"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_expense"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/yellow"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        android:textColor="@android:color/white"/>

</LinearLayout>